--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 /Version python-3/*.zip
 /Version python-3/__pycache__
-/Version python-3.1/*.zip
-/Version python-3.1/framework/__pycache__
+/Version python-3.1.1/*.zip
+/Version python-3.1.1/__pycache__
+/Version python-3.1.1/build
+/Version python-3.1.1./*.spec
