--- a/C#/Wii or VWii Homebrew Installer/Wii or VWii Homebrew Installer.csproj
+++ b/C#/Wii or VWii Homebrew Installer/Wii or VWii Homebrew Installer.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VWii.cs" />
     <Compile Include="Wii.cs" />
   </ItemGroup>
   <ItemGroup>
